# odoocr2020

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  odoo.code-workspace  pyproject.toml  requirements.txt
addons/account_cr/: __manifest__.py
addons/account_cr/views/: account_move.xml
addons/account_extra/: __manifest__.py  utils.py
addons/account_extra/models/: __init__.py  account_extra.py  custom.py  payment.py
addons/account_extra/views/: account_move.xml  account_move_reversal.xml  account_payment.xml  account_res_currency.xml  product_product.xml  res_partnet.xml
addons/account_gti/: __manifest__.py  models.py
addons/account_gti/views/: account_move_economic_activity.xml  account_tax.xml
addons/cr_electronic_invoice/data/: account_journal.xml
addons/cr_electronic_invoice/models/: account_move.py  api_facturae.py  uom.py
addons/custo_web_enterprise/: __manifest__.py
addons/custo_web_enterprise/i18n/: am.po  az.po  bs.po  ca.po  da.po  el.po  en_GB.po  es_AR.po  es_CL.po  es_CO.po  es_DO.po  (+28 more)
addons/custom_crm/: __manifest__.py  models.py
addons/custom_report/: __manifest__.py  models.py
addons/custom_studio/: __manifest__.py
addons/custom_web_gantt/: __manifest__.py
addons_deprecated/cr_electronic_invoice/: __manifest__.py
addons_deprecated/custom_web_map/: validation.py
addonsv2/custom_studio/: __manifest__.py
config/: docker-compose.developed.yml  odoo.conf
docker/: Dockerfile.developed  Dockerfile.production
etc/: data.json  notas.txt  odoo.conf
extra/alto_design/: external_layout_clean.xml
(+399 files in other folders)
